[tool.poetry]
name = "golem"
version = "0.1.0"
description = "Very high performance distributed RL setup"
authors = ["Justin Glibert <justin@glibert.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
